# puzzletree

./: .copier-answers.yml  .gitignore  AI_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  reconstruct_shredder.py
.github/workflows/: ci.yml  docs.yml  release.yml
config/: .bumpversion.cfg  coverage.ini  mkdocs.yml  pytest.ini  ruff.toml
config/cursor/: hooks.json
config/cursor/rules/: layering.mdc  plan-todos.mdc  ruff.mdc
config/vscode/: extensions.json  launch.json  settings.json  tasks.json
docs/: ai_policy.md
docs/.overrides/: main.html
docs/.overrides/partials/: comments.html
docs/reference/: api.md  architecture.md
make_cmds/: build.mk  documentation.mk  notebooks.mk  quality.mk  setup-ide.mk  tests.mk  uv.mk
notebook/: demo.ipynb
scripts/: colors.py  gen_credits.py  generate_coverage_badge.py  render_candidate_reports.py
src/puzzler/: __init__.py  __main__.py  _version.py  config.py
src/puzzler/cli/: __init__.py  main_cli.py  register.py
src/puzzler/cli/commands/reconstruct/: __init__.py
src/puzzler/cli/commands/tile/: __init__.py
src/puzzler/cli/messages/: __init__.py  error.py  message.py  warning.py
src/puzzler/config/: __init__.py  main_config.py
src/puzzler/reconstruct/: __init__.py  core.py  inspect.py  io.py  pipeline.py  render.py
src/puzzler/utils/: logging.py  progress_bar.py
src/puzzler/utils/theme/: __init__.py  theme.py
src/puzzletree/: __init__.py  __main__.py  _version.py  config.py
src/puzzletree/cli/: __init__.py  main_cli.py  register.py
src/puzzletree/cli/commands/reconstruct/: __init__.py
src/puzzletree/cli/commands/tile/: __init__.py
src/puzzletree/cli/messages/: __init__.py  capability.py  error.py  layout.py  warning.py
src/puzzletree/config/: __init__.py  main_config.py
src/puzzletree/reconstruct/: __init__.py  core.py  inspect.py  pipeline.py  render.py
src/puzzletree/utils/: logging.py  progress_bar.py
src/puzzletree/utils/theme/: terminal_colors.py
tests/: __init__.py  conftest.py  test_config.py  test_reconstruct_compat.py  test_reconstruct_core.py  test_reconstruct_inspect.py  test_reconstruct_io.py  test_reconstruct_pipeline.py  test_reconstruct_render.py  test_reconstruct_shredder.py  test_version.py
tests/fixtures/: eval_sample.jsonl  text_sample.jsonl
tests/test_cli/: test_cli.py  test_command_registration.py  test_messages.py  test_reconstruct.py  test_tile.py
tests/test_utils/: __init__.py  test_logging.py  test_progress_bar.py  test_theme.py
